--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Hi there!</h1>
-    <p>Update</p>
+    <p>Hi Eric!</p>
 </div>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core
