--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hi there!</h1>
-    <p>Hi Eric!</p>
+    <h1 class="display-4">Hi there from STAGING!</h1>
+    <p>Hi Eric! Welcome to this page.</p>
 </div>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core
